--- a/config.yaml
+++ b/config.yaml
@@ -16,7 +16,8 @@ select_DC:
   - remove_duplicated
   - add_tokens_base
   # - add_tokens_detail
-  - stop_words
+  # - spacing
+  # - stop_words
 select_DA:
 wandb:
   id: 아이디
