--- a/config.yaml
+++ b/config.yaml
@@ -14,8 +14,9 @@ train:
   test_size: 0.2
 select_DC:
   - remove_duplicated
-  - add_tokens_base
-  # - add_tokens_detail
+  - add_entity_tokens_base
+  # - add_entity_tokens_detail
+  - add_others_tokens
   # - spacing
   # - stop_words
 select_DA:
