--- a/requirements_local.txt
+++ b/requirements_local.txt
@@ -6,6 +6,7 @@ altair @ file:///tmp/build/80754af9/altair_1599835197802/work
 anaconda-client==1.11.0
 anaconda-navigator==2.4.0
 anaconda-project @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_6ddp1qj6b_/croots/recipe/anaconda-project_1660339893712/work
+antlr4-python3-runtime==4.8
 anyio @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/croot-t_zs64wy/anyio_1644482593257/work/dist
 appdirs==1.4.4
 appnope @ file:///Users/ktietz/demo/mc3/conda-bld/appnope_1629146036738/work
@@ -81,15 +82,17 @@ decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
 deepdiff==6.3.0
 defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
 dill @ file:///home/conda/feedstock_root/build_artifacts/dill_1666603105584/work
+Distance==0.1.3
 distlib @ file:///home/conda/feedstock_root/build_artifacts/distlib_1668356257807/work
 distributed @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_bc7f56dc-ce46-4e99-bf6a-2117cfdb91e8lkm51_bj/croots/recipe/distributed_1658520751187/work
 docker-pycreds==0.4.0
 docutils @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_4b209c6c-e21c-4a54-89da-0312ae4d4d1633t7oj7j/croots/recipe/docutils_1657175441571/work
 dulwich @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_73rnypnk3v/croot/dulwich_1679420046310/work
-emoji==2.2.0
+emoji==1.2.0
 entrypoints @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_croot-jb01gaox/entrypoints_1650293758411/work
 et-xmlfile==1.1.0
 executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
+fairseq==0.12.2
 fastapi @ file:///home/conda/feedstock_root/build_artifacts/fastapi_1669571890356/work
 fastjsonschema @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_43a0jaiddu/croots/recipe/python-fastjsonschema_1661368628129/work
 filelock @ file:///home/conda/feedstock_root/build_artifacts/filelock_1681839547898/work
@@ -99,6 +102,7 @@ fonttools==4.25.0
 frozenlist==1.3.3
 fsspec @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_0024111b3j/croots/recipe/fsspec_1659972205747/work
 future @ file:///Users/ktietz/Code/oss/ci_pkgs/future_1626786552456/work
+g2p-en==2.1.0
 gast==0.4.0
 gensim @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_croot-3s6_k3up/gensim_1646835688213/work
 git-lfs==1.6
@@ -119,6 +123,7 @@ holoviews @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_
 html5lib @ file:///home/conda/feedstock_root/build_artifacts/html5lib_1592930327044/work
 huggingface-hub==0.13.4
 hvplot @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_81ho2n3zoz/croots/recipe/hvplot_1659026501852/work
+hydra-core==1.0.7
 hyperlink @ file:///tmp/build/80754af9/hyperlink_1610130746837/work
 idna @ file:///tmp/build/80754af9/idna_1637925883363/work
 imagecodecs @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_73_ti05f9t/croots/recipe/imagecodecs_1664561988595/work
@@ -126,6 +131,7 @@ imageio @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_df
 imagesize @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_4a509a63-68d9-468e-b7b9-f4d4ffac7351q0ounfrz/croots/recipe/imagesize_1657179503380/work
 importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1682176699712/work
 incremental @ file:///tmp/build/80754af9/incremental_1636629750599/work
+inflect==6.0.4
 iniconfig @ file:///home/linux1/recipes/ci/iniconfig_1610983019677/work
 inquirer @ file:///home/conda/feedstock_root/build_artifacts/inquirer_1678135536462/work
 installer @ file:///home/conda/feedstock_root/build_artifacts/python-installer_1679300325491/work
@@ -162,6 +168,7 @@ keras==2.12.0
 keyring @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_8bd22k84zo/croot/keyring_1678999224442/work
 kiwisolver @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_69de275f-e01d-4033-8ea6-9caf70c31072d5uirqak/croots/recipe/kiwisolver_1653292042660/work
 konlpy==0.6.0
+kss==4.5.1
 lazy-object-proxy @ file:///Users/ktietz/demo/mc3/conda-bld/lazy-object-proxy_1629147154221/work
 libarchive-c @ file:///tmp/build/80754af9/python-libarchive-c_1617780486945/work
 libclang==16.0.0
@@ -173,6 +180,7 @@ locket @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_cb5
 lockfile==0.12.2
 lxml @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_71bcfe2b-fe7b-414a-9d7e-4f32bdd95f6d2vxca0jd/croots/recipe/lxml_1657545136492/work
 lz4 @ file:///Users/ktietz/demo/mc3/conda-bld/lz4_1630656244676/work
+marisa-trie==0.8.0
 Markdown @ file:///Users/ktietz/demo/mc3/conda-bld/markdown_1629712599908/work
 MarkupSafe @ file:///Users/ktietz/demo/mc3/conda-bld/markupsafe_1629137411893/work
 matplotlib @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_5fi9l6u9e6/croots/recipe/matplotlib-suite_1660167931049/work
@@ -204,6 +212,7 @@ numpy==1.24.3
 numpydoc @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_8dd11ed9-e670-4d6b-8851-37f8bdc1871e__ce_w_r/croots/recipe/numpydoc_1657529875530/work
 oauthlib==3.2.2
 olefile @ file:///Users/ktietz/demo/mc3/conda-bld/olefile_1629805411829/work
+omegaconf==2.0.6
 openpyxl==3.0.10
 opt-einsum==3.3.0
 ordered-set @ file:///home/conda/feedstock_root/build_artifacts/ordered-set_1643221357603/work
@@ -218,6 +227,7 @@ partd @ file:///opt/conda/conda-bld/partd_1647245470509/work
 pathlib @ file:///Users/ktietz/demo/mc3/conda-bld/pathlib_1629713961906/work
 pathtools==0.1.2
 patsy==0.5.2
+pecab==1.0.8
 pendulum==2.1.2
 pep8==1.7.1
 pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
@@ -233,6 +243,8 @@ ply==3.11
 poetry @ file:///Users/runner/miniforge3/conda-bld/poetry_1680723915144/work
 poetry-core @ file:///home/conda/feedstock_root/build_artifacts/poetry-core_1678790306193/work
 poetry-plugin-export @ file:///home/conda/feedstock_root/build_artifacts/poetry-plugin-export_1681748973730/work
+pororo==0.4.2
+portalocker==2.7.0
 prometheus-client @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_25sgeyk0j5/croots/recipe/prometheus_client_1659455103277/work
 prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1633440160888/work
 Protego @ file:///tmp/build/80754af9/protego_1598657180827/work
@@ -273,6 +285,8 @@ PySocks @ file:///Users/ktietz/Code/oss/ci_pkgs/pysocks_1626781349491/work
 pytest==7.1.2
 python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
 python-editor==1.0.4
+python-mecab-ko==1.3.3
+python-mecab-ko-dic==2.1.1.post2
 python-multipart @ file:///home/conda/feedstock_root/build_artifacts/python-multipart_1679167423335/work
 python-snappy @ file:///Users/ktietz/demo/mc3/conda-bld/python-snappy_1629479973765/work
 pytorch-lightning @ file:///home/conda/feedstock_root/build_artifacts/pytorch-lightning_1682361789319/work
@@ -299,6 +313,7 @@ ruamel-yaml-conda @ file:///Users/ktietz/demo/mc3/conda-bld/ruamel_yaml_16294647
 ruamel.yaml @ file:///Users/runner/miniforge3/conda-bld/ruamel.yaml_1630314112180/work
 ruamel.yaml.clib @ file:///Users/runner/miniforge3/conda-bld/ruamel.yaml.clib_1610146981393/work
 s3transfer @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_3ccd2ead-bd3e-4d8c-bed5-1dfeadf8f171x10gfipf/croots/recipe/s3transfer_1654524201724/work
+sacrebleu==2.3.1
 scikit-image @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_croot-c0p91eu0/scikit-image_1648480705780/work
 scikit-learn @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_c0267ca0-12ff-4800-bd07-7f998adef27bh_cts5yf/croots/recipe/scikit-learn_1658419411147/work
 scipy==1.9.1
@@ -306,6 +321,8 @@ Scrapy @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_a5y
 seaborn @ file:///tmp/build/80754af9/seaborn_1629307859561/work
 semver @ file:///tmp/build/80754af9/semver_1603822362442/work
 Send2Trash @ file:///tmp/build/80754af9/send2trash_1632406701022/work
+sentence-transformers==2.2.2
+sentencepiece==0.1.99
 sentry-sdk @ file:///home/conda/feedstock_root/build_artifacts/sentry-sdk_1682715776378/work
 service-identity @ file:///Users/ktietz/demo/mc3/conda-bld/service_identity_1629460757137/work
 setproctitle==1.3.2
@@ -382,7 +399,10 @@ webencodings==0.5.1
 websocket-client @ file:///Users/ktietz/demo/mc3/conda-bld/websocket-client_1629357070578/work
 websockets==11.0.2
 Werkzeug @ file:///opt/conda/conda-bld/werkzeug_1645628268370/work
+wget==3.2
+Whoosh==2.7.4
 widgetsnbextension @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/croot-ppn8qoma/widgetsnbextension_1645010005457/work
+word2word==1.0.0
 wordcloud==1.8.2.2
 wrapt @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_37a5af2b-c563-4ec6-9258-35772bae6a6agcs4j3hx/croots/recipe/wrapt_1657814428573/work
 xarray @ file:///opt/conda/conda-bld/xarray_1639166117697/work
