--- a/config.yaml
+++ b/config.yaml
@@ -17,6 +17,8 @@ train:
   patience: 5
   test_size: 0.2
   save_top_k: 3 # Inference할 top k개의 모델.
+  focal_loss: True # focal_loss를 사용한다면 True, False시, 자동으로 주어진 lossF로 갑니다
+  focal_loss_scale: 1 # focal_loss의 scale을 조정합니다
 select_DC:
   - remove_duplicated
   - add_entity_tokens_base
