feat: entity를 제외한 토크나이징 방법
기존에 있던 토크나이징 방식은 "[CLS] {entity} [SEP] {entity} [SEP]
{sentence} [SEP]"인데 entity 태그를 추가해주면 앞에 entity 정보는 필요
없을 수도 있으니 검증을 위해 entity를 제외하고 토크나이징한 메소드를
추가하고 config에서 option-short_tokenizing 속성을 통해 동적으로 적용
가능하도록 코드를 추가함

--- a/config.yaml
+++ b/config.yaml
@@ -22,10 +22,9 @@ select_DC:
   - add_entity_tokens_base
   # - add_entity_tokens_detail
   - add_others_tokens
-  # - spacing
-  # - stop_words
 select_DA:
 wandb:
   id: 아이디
 option:
   early_stop: True
+  short_tokenizing: False
