--- a/config.yaml
+++ b/config.yaml
@@ -19,6 +19,11 @@ train:
   save_top_k: 3 # Inference할 top k개의 모델.
   focal_loss: True # focal_loss를 사용한다면 True, False시, 자동으로 주어진 lossF로 갑니다
   focal_loss_scale: 1 # focal_loss의 scale을 조정합니다
+  adverse_valid: True # 
+  TAPT: True #
+  LSTM:
+    Do: True
+    Truncate: True
 select_DC:
   - remove_duplicated
   # - normalize_class
