--- a/config.yaml
+++ b/config.yaml
@@ -22,9 +22,11 @@ train:
 select_DC:
   - remove_duplicated
   # - normalize_class
-  - add_entity_tokens_base
+  # - add_entity_tokens_base
   # - add_entity_tokens_detail
+  - add_only_punct
   - add_others_tokens
+  - quering_with_punct
 select_DA:
 wandb:
   id: 아이디
