--- a/config.yaml
+++ b/config.yaml
@@ -22,8 +22,9 @@ train:
 select_DC:
   - remove_duplicated
   # - normalize_class
-  - add_entity_tokens_base
+  # - add_entity_tokens_base
   # - add_entity_tokens_detail
+  - add_only_punct
   - add_others_tokens
 select_DA:
 wandb:
