--- a/config.yaml
+++ b/config.yaml
@@ -6,6 +6,7 @@ train:
   epoch: 100
   batch_size: 32
   LR:    #LambdaLR, StepLR, CyclicLR, ExponentialLR, WarmupConstantLR 
+    lossF: 로스 함수명
     name: 스케줄러명
     lr: 0.000001
     base: 20 # CyclicLR를 쓴다면, LR에 대한 min_lr을 적어주세요(20 == LR/20)
@@ -36,6 +37,8 @@ select_DC:
   - add_others_tokens
   - quering_with_punct
 select_DA:
+  # - swap_sentence
+  # - sub_obj_change_augment
 wandb:
   id: 아이디
 option:
