--- a/config.yaml
+++ b/config.yaml
@@ -29,8 +29,8 @@ train:
   no_valid: False # valid set 안 씀
   TAPT: False #
   LSTM:
-    Do: True
-    Truncate: True
+    do: True
+    truncate: True
 select_DC:
   - remove_duplicated
   # - normalize_class
