--- a/config.yaml
+++ b/config.yaml
@@ -29,7 +29,7 @@ train:
   no_valid: False # valid set 안 씀
   TAPT: False #
   LSTM:
-    do: True
+    Do: True
     truncate: True
 select_DC:
   - remove_duplicated
