--- a/config.yaml
+++ b/config.yaml
@@ -37,6 +37,7 @@ train:
     Do: True
     truncate: True
   halfprecision: True
+  gradient_accumulation: 1    # 배치사이즈=16 이고 이 옵션이 2일때, batch=32와 같은 효과.
 select_DC:
   - remove_duplicated
   # - normalize_class
